--- a/map-us.html
+++ b/map-us.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Cell Towers</title>
+    <title>COVID-19 Confirmed Cases (U.S.)</title>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
@@ -16,13 +16,9 @@
 
     <div id="map"></div>
 
-    <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js"></script>
-
     <!-- JS -->
     <script src="static/resources/confirmed-us.json"></script>
     <script type="text/javascript" src="static/js/heatmap-us.js"></script>
-    <!-- <script type="text/javascript" src="static/js/markers.js"></script> -->
 
     <!-- Leaflet heatmap plugin-->
     <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
