--- a/index.html
+++ b/index.html
@@ -1,28 +1,48 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <title>COVID-19 Confirmed Cases (Global)</title>
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <link rel="stylesheet" href="./static/css/style.css" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>COVID-19 Dashboard</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="static/css/styles.css" />
 </head>
 
-  <body>
+<body>
+  <div class="container-fluid">
 
-    <div id="map"></div>
+    <!-- Header -->
+    <header class="row">
+      <h1><a href="/">COVID-19</a></h1>
+      <!-- Navigation -->
+      <nav>
+          <ul>
+              <li class="active">Dashboard</li>
+              <li><a href="/map-us.html">U.S. Map</a></li>
+              <li><a href="/map-world.html">World Map</a></li>
+          </ul>
+      </nav>
+    </header>
 
-    <!-- JS -->
-    <script src="static/resources/confirmed.json"></script>
-    <script type="text/javascript" src="static/js/heatmap.js"></script>
+    <div class="row main-content">
+      <h3>Our Research</h3>
+      <img src="static/images/countries_byday.png" /><br />
+      <p>For this project we were interested in analyzing the World Development Indicators (WDI)
+        that have been tracked by the World Bank for more than 50 years in order to help achieve global development goals. 
+        In conjunction, the U.N. has developed the Human Development Index (HDI) to focus 
+        on the criteria that define human achievement beyond just economic development. We wanted to discover which WDIs in 
+        particular affect HDI and what level of values can help increase HDI. Our "primary" indicators 
+        were simply those that most countries have data for and have been tracked the longest. Our "secondary" indicators are ones
+        that we discovered to be highly related to HDI and worth exploring, despite less availability of tracked data.</p>
+    </div>
 
-    <!-- Leaflet heatmap plugin-->
-    <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
+    <!-- Footer -->
+    <footer class="row">
+      <p>&copy;2020 Ellen Hsu</p>
+    </footer>
 
-
-  </body>
-
+  </div>
+</body>
 </html>
