--- a/map-airports.html
+++ b/map-airports.html
@@ -18,7 +18,7 @@
     <!-- JS -->
     <script src="static/resources/airports/airports.geojson"></script>
     <script type="text/javascript" src="static/js/config.js"></script>
-    <script type="text/javascript" src="static/js/airports4.js"></script>
+    <script type="text/javascript" src="static/js/airports.js"></script>
 
     <!-- Leaflet heatmap plugin-->
     <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
