--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <nav>
           <ul>
               <li class="active">Dashboard</li>
-              <li><a href="/map-us.html">U.S. Map</a></li>
-              <li><a href="/map-world.html">World Map</a></li>
+              <li><a href="/map.html">World Map</a></li>
           </ul>
       </nav>
     </header>
