--- a/map.html
+++ b/map.html
@@ -6,28 +6,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>COVID-19 World Map</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  <title>COVID-19 Analysis</title>
   <link rel="stylesheet" href="static/css/styles.css" />
+
+  <!-- Vendor CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Open+Sans:wght@300&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/59aae0ebe9.css">
+  <link href="static/css/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Leaflet -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
+
+  <!-- Styles to help render Leaflet map correctly -->
+  <style type="text/css">
+    .container-fluid {
+      height: 100%;
+    }
+  </style>
 </head>
 
 <body>
-  <!-- <div class="container-fluid"> -->
+  <div class="container-fluid">
+    <header class="row">
+      <h1><a href="/">COVID-19 Analysis</a></h1>
+      <!-- Navigation -->
+      <nav>
+          <ul>
+              <li><a href="/index.html">Global Cases</a></li>
+              <li><a href="/health.html">Population &amp; Health</a></li>
+              <li class="active">Travel</li>
+              <li><a href="/sources.html">Data Sources</a></li>
+          </ul>
+      </nav>
+    </header>
 
-    <div id="map"></div>
+    <div class="row main-content">
 
-    <!-- JS -->
-    <script type="text/javascript" src="static/js/config.js"></script>
-    <script type="text/javascript" src="static/js/map.js"></script>
+      <div class="heading">
+        <h3>Travel</h3>
+      </div>
+      <div id="map"></div>
 
-    <!-- Leaflet heatmap plugin-->
-    <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
+      <div class="chart summary">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar purus non erat ornare, non viverra augue viverra. Pellentesque nec ullamcorper felis. Etiam ac dolor sollicitudin, pellentesque elit ut, fermentum orci. Phasellus sed tempor diam, ut auctor orci. Nam commodo tincidunt risus. In fringilla, risus id maximus laoreet, nunc dui dictum justo, non molestie leo felis non massa. Duis arcu erat, sodales ac euismod ac, feugiat et turpis. Maecenas blandit at mauris vel congue. </p>
+      </div>
 
-  <!-- </div> -->
+    </div>
+
+    <!-- Footer -->
+    <footer class="row">
+      <div class="social">
+        &copy; 2020 Ellen Hsu&nbsp;
+        <a href="mailto:ellemonke@gmail.com" title="Email: ellemonke@gmail.com" target="_blank">
+          <i class="far fa-envelope"></i>
+        </a>
+        <a href="https://github.com/ellemonke" title="GitHub" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/ellenyhsu/" title="LinkedIn" target="_blank">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </div>
+    </footer>
+
+  </div>
 </body>
+  <!-- JS -->
+  <script type="text/javascript" src="static/js/config.js"></script>
+  <script type="text/javascript" src="static/js/map.js"></script>
+  <script src="static/resources/confirmed.geojson"></script>
+  <script src="static/resources/airports/airports.geojson"></script>
+
+  <!-- Leaflet heatmap plugin-->
+  <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
 </html>
