sources readme organize

--- a/sources.html
+++ b/sources.html
@@ -45,11 +45,12 @@
         <div class="col-sm-11 chart">
           <h3>Data Sources</h3>
           <ol>
-            <li>John Hopkins <a href="" target="_new">on GitHub</a></li>
-            <li>John Hopkins <a href="" target="_new">on GitHub</a></li>
-            <li>John Hopkins <a href="" target="_new">on GitHub</a></li>
-            <li>John Hopkins <a href="" target="_new">on GitHub</a></li>
-            <li>John Hopkins <a href="" target="_new">on GitHub</a></li>
+            <li><a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series" target="_new">"Novel Coronavirus (COVID-19) Cases", CSSE at Johns Hopkins University on GitHub <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="https://datahelpdesk.worldbank.org/knowledgebase/articles/889392-about-the-indicators-api-documentation" target="_new">"Population", "Population Density", and "Regions", World Bank API <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="https://ourworldindata.org/burden-of-disease" target="_new">"Burden of Disease", Our World In Data <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="https://data.world/datagov-uk/2ecd2a35-fc85-4cd9-b1e7-3a8f92d76fd7" target="_new">"Busiest Airports by Passenger Traffic", data.gov.uk on data.world <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="https://rapidapi.com/cometari/api/airportsfinder" target="_new">"Airports Finder" (Lat, Long), Rapid API <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="https://developers.google.com/maps/documentation/geocoding/intro" target="_new">"U.S. States" (Lat, Long), Google Maps Geocoding API <i class="fas fa-external-link-alt"></i></a></li>
           </ol>
         </div>
       </div>
