--- a/health.html
+++ b/health.html
@@ -47,7 +47,7 @@
             <div class="col-sm-12 col-md-6">
               <!-- <h4>Burden of Disease</h4> -->
               <img src="static/images/model_sir.png" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
+              <p>Non-communicable Disease (NCD). Disability-Adjusted Life Year (DALY). Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
             </div>  
           </div>
           <div class="row">
