--- a/map.html
+++ b/map.html
@@ -7,29 +7,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>COVID-19 Analysis</title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Open+Sans:wght@300&family=Source+Sans+Pro&display=swap">
+  <link rel="stylesheet" href="static/css/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="static/css/styles.css" />
 
-  <!-- Vendor CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Open+Sans:wght@300&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/59aae0ebe9.css">
-  <link href="static/css/fontawesome-free/css/all.min.css" rel="stylesheet">
-
-  <!-- Leaflet -->
+  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
 
-  <!-- Styles to help render Leaflet map correctly -->
   <style type="text/css">
     .container-fluid {
       height: 100%;
     }
   </style>
+
 </head>
 
 <body>
   <div class="container-fluid">
+
+    <!-- Header -->
     <header class="row">
       <h1><a href="/">COVID-19 Analysis</a></h1>
       <!-- Navigation -->
@@ -73,13 +72,16 @@
     </footer>
 
   </div>
-</body>
+
   <!-- JS -->
+  <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
+  <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
+
+  <script type="text/javascript" src="static/resources/cases/confirmed.geojson"></script>
+  <script type="text/javascript" src="static/resources/airports/airports.geojson"></script>
   <script type="text/javascript" src="static/js/config.js"></script>
   <script type="text/javascript" src="static/js/map.js"></script>
-  <script src="static/resources/cases/confirmed.geojson"></script>
-  <script src="static/resources/airports/airports.geojson"></script>
 
-  <!-- Leaflet heatmap plugin-->
-  <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
+</body>    
 </html>
