--- a/sources.html
+++ b/sources.html
@@ -7,19 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
   <title>COVID-19 Analysis</title>
-  <link rel="stylesheet" href="static/css/styles.css" />
 
-  <!-- Vendor CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Open+Sans:wght@300&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/59aae0ebe9.css">
-  <link href="static/css/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Open+Sans:wght@300&family=Source+Sans+Pro&display=swap">
+  <link rel="stylesheet" href="static/css/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="static/css/styles.css" />
 
   <style type="text/css">
     .container-fluid {
       height: 100%;
     }
   </style>
+
 </head>
 
 <body>
@@ -74,5 +74,6 @@
     </footer>
 
   </div>
+  
 </body>
 </html>
