--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="col-sm-12 col-md-6">
           <div class="chart">
             <h4>Confirmed Cases</h4>
-            <img src="static/images/model_sir.png" class="lineChart" />
+            <img src="static/images/confirmed_global.png" class="lineChart" />
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Aenean felis diam, dictum nec orci ac, maximus tempus lectus. Nam id neque ante. Vivamus vestibulum porttitor metus at dapibus. Vestibulum sed porttitor mi, et interdum nisl. Phasellus sit amet risus at tellus viverra vulputate.</p>    
           </div>
         </div>
@@ -67,7 +67,7 @@
         <div class="col-sm-12 col-md-6">
           <div class="chart">
             <h4>Confirmed v. Fatalities</h4>
-            <img src="static/images/model_sir.png" class="barChart" />
+            <img src="static/images/cvf_global.png" class="barChart" />
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Aenean felis diam, dictum nec orci ac, maximus tempus lectus. Nam id neque ante. Vivamus vestibulum porttitor metus at dapibus. Vestibulum sed porttitor mi, et interdum nisl. Phasellus sit amet risus at tellus viverra vulputate.</p>    
           </div>
         </div>
