--- a/health.html
+++ b/health.html
@@ -41,24 +41,24 @@
           <div class="row">
             <div class="col-sm-12 col-md-6">
               <!-- <h4>Population Density</h4> -->
-              <img src="static/images/model_sir.png" />
+              <img src="static/images/scatter_popdensity.png" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
             </div>
             <div class="col-sm-12 col-md-6">
               <!-- <h4>Burden of Disease</h4> -->
-              <img src="static/images/model_sir.png" />
+              <img src="static/images/scatter_ncds.png" />
               <p>Non-communicable Disease (NCD). Disability-Adjusted Life Year (DALY). Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
             </div>  
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-6">
               <!-- <h4>Age</h4> -->
-              <img src="static/images/model_sir.png" />
+              <img src="static/images/scatter_age.png" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
             </div>
             <div class="col-sm-12 col-md-6">
               <!-- <h4>Respiratory Disease</h4> -->
-              <img src="static/images/model_sir.png" />
+              <img src="static/images/scatter_resps.png" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
             </div>              
           </div>
