--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <form class="row">
           <select name="country" id="country" class="country">
             <option value="Global">Global Cases</option>
-            <option value="US">United States</option>
+            <option value="United States">United States</option>
             <option value="Italy">Italy</option>
             <option value="Spain">Spain</option>
             <option value="France">France</option>
@@ -50,8 +50,8 @@
       </form>
 
       <div class="row stats">
-        <div class="stat"><h4>Tested</h4><div id="tested"></div></div>
         <div class="stat"><h4>Confirmed</h4><div id="confirmed"></div></div>
+        <div class="stat"><h4>Recovered</h4><div id="recovered"></div></div>
         <div class="stat"><h4>Fatalities</h4><div id="fatalities"></div></div>
       </div>
 
@@ -96,7 +96,7 @@
 
   <!-- JS -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="static/resources/cases/confirmed.js"></script>
+  <script src="static/resources/cases/all.json"></script>
   <script src="static/js/index.js"></script>
 
 </body>
