full screen view

--- a/map.html
+++ b/map.html
@@ -35,8 +35,8 @@
       <nav>
           <ul>
               <li><a href="/index.html">Global Cases</a></li>
+              <li class="active">Airport Travel</li>
               <li><a href="/health.html">Population &amp; Health</a></li>
-              <li class="active">Travel</li>
               <li><a href="/sources.html">Data Sources</a></li>
           </ul>
       </nav>
