--- a/sources.html
+++ b/sources.html
@@ -32,8 +32,8 @@
       <nav>
           <ul>
               <li><a href="/index.html">Global Cases</a></li>
+              <li><a href="/map.html">Airport Travel</a></li>
               <li><a href="/health.html">Population &amp; Health</a></li>
-              <li><a href="/map.html">Travel</a></li>
               <li class="active">Data Sources</a></li>
           </ul>
       </nav>
@@ -42,7 +42,7 @@
     <div class="row main-content">
 
       <div class="row">
-        <div class="col-sm-11 chart">
+        <div class="col-sm-11 chart full-page">
           <h3>Data Sources</h3>
           <ol>
             <li><a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series" target="_new">"Novel Coronavirus (COVID-19) Cases", CSSE at Johns Hopkins University on GitHub <i class="fas fa-external-link-alt"></i></a></li>
