--- a/health.html
+++ b/health.html
@@ -26,8 +26,8 @@
       <nav>
           <ul>
               <li><a href="/index.html">Global Cases</a></li>
+              <li><a href="/map.html">Airport Travel</a></li>
               <li class="active">Population &amp; Health</li>
-              <li><a href="/map.html">Travel</a></li>
               <li><a href="/sources.html">Data Sources</a></li>
           </ul>
       </nav>
