--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <nav>
           <ul>
               <li class="active">Global Cases</li>
-              <li><a href="/map.html">Airport Travel</a></li>
-              <li><a href="/health.html">Population &amp; Health</a></li>
-              <li><a href="/sources.html">Data Sources</a></li>
+              <li><a href="map.html">Airport Travel</a></li>
+              <li><a href="health.html">Population &amp; Health</a></li>
+              <li><a href="sources.html">Data Sources</a></li>
           </ul>
       </nav>
     </header>
