--- a/health.html
+++ b/health.html
@@ -25,10 +25,10 @@
       <!-- Navigation -->
       <nav>
           <ul>
-              <li><a href="/index.html">Global Cases</a></li>
-              <li><a href="/map.html">Airport Travel</a></li>
+              <li><a href="index.html">Global Cases</a></li>
+              <li><a href="map.html">Airport Travel</a></li>
               <li class="active">Population &amp; Health</li>
-              <li><a href="/sources.html">Data Sources</a></li>
+              <li><a href="sources.html">Data Sources</a></li>
           </ul>
       </nav>
     </header>
