--- a/map.html
+++ b/map.html
@@ -34,10 +34,10 @@
       <!-- Navigation -->
       <nav>
           <ul>
-              <li><a href="/index.html">Global Cases</a></li>
+              <li><a href="index.html">Global Cases</a></li>
               <li class="active">Airport Travel</li>
-              <li><a href="/health.html">Population &amp; Health</a></li>
-              <li><a href="/sources.html">Data Sources</a></li>
+              <li><a href="health.html">Population &amp; Health</a></li>
+              <li><a href="sources.html">Data Sources</a></li>
           </ul>
       </nav>
     </header>
