--- a/sources.html
+++ b/sources.html
@@ -31,9 +31,9 @@
       <!-- Navigation -->
       <nav>
           <ul>
-              <li><a href="/index.html">Global Cases</a></li>
-              <li><a href="/map.html">Airport Travel</a></li>
-              <li><a href="/health.html">Population &amp; Health</a></li>
+              <li><a href="index.html">Global Cases</a></li>
+              <li><a href="map.html">Airport Travel</a></li>
+              <li><a href="health.html">Population &amp; Health</a></li>
               <li class="active">Data Sources</a></li>
           </ul>
       </nav>
