--- a/map.html
+++ b/map.html
@@ -30,7 +30,7 @@
 
     <!-- Header -->
     <header class="row">
-      <h1><a href="/">COVID-19 Analysis</a></h1>
+      <h1><a href="index.html">COVID-19 Analysis</a></h1>
       <!-- Navigation -->
       <nav>
           <ul>
