--- a/map.html
+++ b/map.html
@@ -22,7 +22,7 @@
     crossorigin="" />
 
   <style type="text/css">
-    .container-fluid {
+    .container-fluid, .main-content {
       height: 100%;
     }
   </style>
@@ -54,11 +54,23 @@
       <div id="map"></div>
 
       <div class="chart summary">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar purus non erat ornare, non viverra test
-          augue viverra. Pellentesque nec ullamcorper felis. Etiam ac dolor sollicitudin, pellentesque elit ut,
-          fermentum orci. Phasellus sed tempor diam, ut auctor orci. Nam commodo tincidunt risus. In fringilla, risus id
-          maximus laoreet, nunc dui dictum justo, non molestie leo felis non massa. Duis arcu erat, sodales ac euismod
-          ac, feugiat et turpis. Maecenas blandit at mauris vel congue. </p>
+          <p>COVID-19 was first found in China on January 22, 2020. Within a week, it reached Europe and the United States -
+            though it did not reach Central Asia until a month later. The number of cases increased rapidly in major European
+            countries and the U.S., but not in more populated countries such as India or Singapore. The spread of COVID-19 was not
+            directly correlated with proximity to China or population.
+            <br /><br />
+            The rate of spread of COVID-19 seems to be related to the locations of the world's busiest airports based on passenger
+            traffic. The top ten largest airports in Europe are in the top five countries with COVID-19. The world's largest 
+            international airport is in Dubai - near Iran, which has the 8th highest number of cases. The largest airports in the
+            U.S. are also in the "hotspots" of COVID-19 cases, with varying degrees of radius and intensity. Other U.S. cities with
+            troubling numbers of cases are New Orleans and Detroit which would need further analysis. Though China had some of the
+            first cases of COVID-19 and some of the world's largest airports, its
+            <a href="https://en.wikipedia.org/wiki/2020_Hubei_lockdowns" target="_new">immediate next-day lockdown measures</a> 
+            prevented the disease from rapidly spreading.
+            <br /><br />
+            <sm>Note: On this map, the latitude and longitude of COVID-19 cases in some countries is based on the center of the
+            country. Only China, Canada, and Australia had specific province-level data and the U.S. had county-level data.</sm>
+          </p>
       </div>
 
     </div>
