--- a/map.html
+++ b/map.html
@@ -49,7 +49,7 @@
     <div class="row main-content">
 
       <div class="heading">
-        <h3>Travel</h3>
+        <h3>Airport Travel</h3>
       </div>
       <div id="map"></div>
 
@@ -60,16 +60,16 @@
             directly correlated with proximity to China or population.
             <br /><br />
             The rate of spread of COVID-19 seems to be related to the locations of the world's busiest airports based on passenger
-            traffic. The top ten largest airports in Europe are in the top five countries with COVID-19. The world's largest 
-            international airport is in Dubai - near Iran, which has the 8th highest number of cases. The largest airports in the
-            U.S. are also in the "hotspots" of COVID-19 cases, with varying degrees of radius and intensity. Other U.S. cities with
-            troubling numbers of cases are New Orleans and Detroit which would need further analysis. Though China had some of the
-            first cases of COVID-19 and some of the world's largest airports, its
+            traffic. The top ten largest airports in Europe are in the top five countries with the highest number of COVID-19 cases. 
+            The world's largest international airport is in Dubai - near Iran, which has the 8th highest number of cases. The
+            largest airports in the U.S. are also in the "hotspots" of COVID-19 cases, with varying degrees of radius and intensity.
+            Other U.S. cities with troubling numbers of cases are New Orleans, Detroit and Indianapolis, which would need further  
+            analysis. Though China had some of the first cases of COVID-19 and some of the world's largest airports, its
             <a href="https://en.wikipedia.org/wiki/2020_Hubei_lockdowns" target="_new">immediate next-day lockdown measures</a> 
-            prevented the disease from rapidly spreading.
+            prevented the disease from spreading rapidly.
             <br /><br />
-            <sm>Note: On this map, the latitude and longitude of COVID-19 cases in some countries is based on the center of the
-            country. Only China, Canada, and Australia had specific province-level data and the U.S. had county-level data.</sm>
+            <strong>Note:</strong> On this map, the latitude and longitude of COVID-19 cases in some countries is based on the center of the
+            country. Only China, Canada, and Australia had specific province-level data and the U.S. had county-level data.
           </p>
       </div>
 
