--- a/health.html
+++ b/health.html
@@ -42,24 +42,37 @@
             <div class="col-sm-12 col-md-6">
               <!-- <h4>Population Density</h4> -->
               <img src="static/images/scatter_popdensity.png" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
+              <p>When looking at the number of confirmed cases, one might consider population density. Confirmed cases in this chart
+                were baselined at 21 days from the first confirmed case, after the disease had some time to spread. There does not seem
+                to be a relationship between population density and the number of confirmed cases. The outlier in the lower right is 
+                Singapore; the outlier in the upper left is the U.S.</p>
             </div>
             <div class="col-sm-12 col-md-6">
               <!-- <h4>Burden of Disease</h4> -->
               <img src="static/images/scatter_ncds.png" />
-              <p>Non-communicable Disease (NCD). Disability-Adjusted Life Year (DALY). Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
+              <p>Prior health conditions, or Non-communicable Diseases (NCDs), are also believed to affect the severity of COVID-19,
+                putting one's mortality at risk. NCDs are measured by Disability-Adjusted Life Years (DALYs) or the number of years lost
+                to an NCD (country total). Fatality rate does not seem to be driven by NCDs. The outlier in the upper left is the
+                Philippines.</p>
             </div>  
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-6">
               <!-- <h4>Age</h4> -->
               <img src="static/images/scatter_age.png" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
+              <p>Another early belief about COVID-19 was that it was particularly fatal for seniors. However, when comparing the
+                senior population of countries (ages 70+) it does not correlate with a country's fatality rate. Senior age does not
+                necessarily determine one's ability or inability to overcome a disease such as COVID-19.</p>
+                <!-- Other factors might
+                affect fatality rate of a country more directly than age, such as social distancing or hospitalization prior to death. -->
             </div>
             <div class="col-sm-12 col-md-6">
               <!-- <h4>Respiratory Disease</h4> -->
               <img src="static/images/scatter_resps.png" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis venenatis odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>    
+              <p>Respiratory disease is a type of NCD. Based on the most severe symptoms of COVID-19, it seems to attack the lungs.
+                People with weak respiratory systems might seem to be at a higher risk of fatality from COVID-19. However, this early
+                data does not show a clear relationship between respiratory disease and COVID-19 fatality rates. The outliers in the 
+                lower right are India and China.</p>
             </div>              
           </div>
 
