--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="chart chart2">
             <img src="static/images/chart2_global.png" />
             <p class="desc_global">
-              The number of infected equals confirmed cases minus recovered minus fatalities. China peaked at 60,005 infections on February 18, 2020. Infections started to spread in many European countries early March. Infections have started to come down in Iran and Germany - peaking at 38,490 and 74 674 on April 5 and 6, respectively. The number of infections in the U.S. surpassed all other countries on March 26 and is now more than four-times any other country so far.</p>
+              The number of infected equals confirmed cases minus recovered minus fatalities. China peaked at 60,005 infections on February 18, 2020. Infections started to spread in many European countries early March. Infections have started to come down in Iran and Germany - peaking at 38,490 and 74,674 on April 5 and 6, respectively. The number of infections in the U.S. surpassed all other countries on March 26 and is now more than four-times any other country so far.</p>
             <p class="desc_country">
               Many people might be asking, "Have we flattened the curve?" While it is difficult to determine what exactly causes the number of new cases to decline, the good news is that several countries have seen a decrease in the last 1-2 weeks. For U.S. and France, it is too soon to tell if the number of new cases has reached a peak but the rate of increase has slowed. China is back down to less than 100 new cases per day, while many countries are still deep in the middle of their COVID-19 crisis. 
             </p>
